wui fix edit buttons text not disappearing on narrow screen

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -735,7 +735,7 @@ ez-exercise-badge ez-icon {
     gap: 2rem 5rem;
 }
 
-@container subpage-tabs (width < 650px) {
+@container tabs (width < 650px) {
     #global-exercise ez-tabs-trailer ez-btn-content ez-btn-text {
         display: none;
     }
